smartemission/services/admin/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: admin-deployment
  namespace: smartemission
  labels:
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: smartemission/se-admin:2.0.0
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 3
        resources:
          limits:
            cpu: "50m"
            memory: "100M"
          requests:
            cpu: "50m"
            memory: "100M"
        ports:
        - containerPort: 80
