smartemission/services/admin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: smartemission
  labels:
    app: admin
spec:
  ports:
  - port: 80
  selector:
    app: admin
